## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (include)
## autotools build system for Airframe
## ------------------------------------------------------------------------
## Copyright (C) 2006-2011 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Brian Trammell
## ------------------------------------------------------------------------
## GNU Lesser GPL Rights pursuant to Version 2.1, February 1999
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

nobase_include_HEADERS = airframe/autoinc.h         airframe/airutil.h \
                         airframe/daeconfig.h       airframe/logconfig.h \
                         airframe/mio.h             airframe/mio_stdio.h \
                         airframe/mio_source_file.h airframe/mio_sink_file.h \
                         airframe/mio_source_udp.h  airframe/mio_sink_udp.h \
                         airframe/mio_source_tcp.h  airframe/mio_sink_tcp.h \
                         airframe/mio_source_pcap.h airframe/mio_sink_multi.h \
                         airframe/mio_config.h      airframe/privconfig.h \
                         airframe/airopt.h          airframe/airlock.h
