## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (source)
## autotools build system for YAF
## ------------------------------------------------------------------------
## Copyright (C) 2007-2013 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Chris Inacio <inacio@cert.org>
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------


SUBDIRS = 

if PLUGINENABLE
SUBDIRS += hooks
endif

if APPLABELENABLE
SUBDIRS += plugins
endif




